--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-navigation/native": "^7.0.8",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.14",
+    "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -21,6 +23,7 @@
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "sass": "^1.81.0",
