--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-permissions": "^5.2.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
