--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-permissions": "^5.2.1",
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-svg": "^15.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
     "sass": "^1.81.0",
     "styled-components": "^6.1.13"
